# openfeedback

./: Cargo.toml  LICENSE  README.md
src/: audit.rs  config.rs  i18n.rs  main.rs  render.rs  types.rs
src/providers/: discord.rs  mod.rs  orchestrator.rs  telegram.rs
